Add terminate action button

--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/DebugUIMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/DebugUIMessages.properties
@@ -163,6 +163,8 @@ CodePagesPrefDialog_8=Invalid codepage
 CodePagesPrefDialog_9=EBCDIC codepage entered is invalid.
 CodePagesPrefDialog_0=The codepage is not supported.
 
+TerminateConfiguration_No_Active_Processes=No active processes
+
 ##############################################################
 # View Tab
 ##############################################################
