Terminate All processes

--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/DebugUIMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/DebugUIMessages.properties
@@ -164,6 +164,10 @@ CodePagesPrefDialog_9=EBCDIC codepage entered is invalid.
 CodePagesPrefDialog_0=The codepage is not supported.
 
 TerminateConfiguration_No_Active_Processes=No active processes
+TerminateConfiguration_No_Processes_Found=No Processes Found
+TerminateConfiguration_Rendering_1=Couldn't 
+TerminateConfiguration_Stop=Stop 
+TerminateConfiguration_Terminate_All=Terminate All
 
 ##############################################################
 # View Tab
